[gd_scene load_steps=15 format=3 uid="uid://ttdjxtppgh3b"]

[ext_resource type="Script" uid="uid://bletu57ntws2a" path="res://main_endless.gd" id="1_d1sac"]
[ext_resource type="Texture2D" uid="uid://ctcawoigrn5eh" path="res://Asset/Background/WhatsApp Image 2025-11-30 at 11.06.43.jpeg" id="2_dcpx8"]
[ext_resource type="PackedScene" uid="uid://d1wfy42x057kh" path="res://player.tscn" id="3_udm53"]
[ext_resource type="FontFile" uid="uid://cbohj6gog6nmy" path="res://gloriahallelujah.ttf" id="4_l4kvc"]
[ext_resource type="PackedScene" uid="uid://dvaqavvas4jw0" path="res://Pause_Menu.tscn" id="5_dcpx8"]
[ext_resource type="FontFile" uid="uid://cicwsvg5cyhb0" path="res://Asset/font/Pixellari.ttf" id="5_udm53"]
[ext_resource type="PackedScene" uid="uid://djdq4iab0jm17" path="res://endless_tutorial_popup.tscn" id="7_l4kvc"]

[sub_resource type="LabelSettings" id="LabelSettings_l4kvc"]
font = ExtResource("5_udm53")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_8g01r"]
font = ExtResource("5_udm53")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.0728426, 0.0728426, 0.0728426, 0.443137)

[sub_resource type="LabelSettings" id="LabelSettings_neb3w"]
font = ExtResource("5_udm53")
font_size = 25

[sub_resource type="SystemFont" id="SystemFont_1bvp3"]

[sub_resource type="LabelSettings" id="LabelSettings_5aq1q"]
font = ExtResource("5_udm53")
font_size = 70

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(133.5, 657)

[node name="Main_Endless" type="Node2D"]
script = ExtResource("1_d1sac")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -3.0
offset_right = 1167.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dcpx8")
flip_h = true

[node name="Player" parent="." instance=ExtResource("3_udm53")]
position = Vector2(38, 371)
scale = Vector2(4, 4)

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Marker2D2" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1170, 170)

[node name="Marker2D3" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1166, 318)

[node name="Marker2D4" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1162, 441)

[node name="Marker2D5" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1168, 607)

[node name="Marker2D6" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1168, 535)

[node name="Marker2D7" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1168, 487)

[node name="Marker2D8" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1170, 393)

[node name="Marker2D9" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1170, 353)

[node name="Marker2D10" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1170, 273)

[node name="Marker2D11" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1170, 225)

[node name="enemycontainer" type="Node2D" parent="."]
position = Vector2(-8, 4)

[node name="ProjectileContainer" type="Node2D" parent="."]
position = Vector2(1176, 240)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.018

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 13.0
offset_right = 96.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_l4kvc")
theme_override_font_sizes/font_size = 40
text = "Score Info"
label_settings = SubResource("LabelSettings_l4kvc")
metadata/_edit_use_anchors_ = true

[node name="HPLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -53.0
offset_right = 159.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_l4kvc")
theme_override_font_sizes/font_size = 29
text = "HP :"
label_settings = SubResource("LabelSettings_8g01r")
metadata/_edit_use_anchors_ = true

[node name="GameOverLabel" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_udm53")
theme_override_font_sizes/normal_font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_1bvp3")
bbcode_enabled = true
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -41.0
offset_right = 54.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_l4kvc")
theme_override_font_sizes/font_size = 36
text = "Wave Info"
label_settings = SubResource("LabelSettings_neb3w")

[node name="WaveIntroLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_1bvp3")
theme_override_font_sizes/font_size = 100
label_settings = SubResource("LabelSettings_5aq1q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLine"]
position = Vector2(-65, 327)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 1.509
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("5_dcpx8")]
visible = false

[node name="EndlessTutorialPopup" parent="." instance=ExtResource("7_l4kvc")]
visible = false
offset_left = 222.0
offset_top = 100.0
offset_right = 910.0
offset_bottom = 556.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="area_entered" from="PlayerLine" to="." method="_on_player_line_area_entered"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
